--- a/www.nfl.com/index.html
+++ b/www.nfl.com/index.html
@@ -1,15 +1,14 @@
-<HTML>
-<!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
+<script type="text/javascript">
+!function(c,l,a,r,i,t,y){
+    c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+    t=l.createElement(r);t.async=1;
+    t.src="https://js.monitor.azure.com/scripts/b/ai.2.min.js";
+    y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+}(window,document,"appInsights","script");
 
-<!-- Mirrored from www.nfl.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 12 Jan 2026 08:53:49 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html;charset=UTF-8"><META HTTP-EQUIV="Refresh" CONTENT="0; URL=https://www.nfl.com/international/"><TITLE>Page has moved</TITLE>
-</HEAD>
-<BODY>
-<A HREF="https://www.nfl.com/international/"><h3>Click here...</h3></A>
-</BODY>
-<!-- Created by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
+appInsights("config", {
+    connectionString: "InstrumentationKey=2ef7b1d2-c44f-4b02-ad38-3af872b5433b;IngestionEndpoint=https://eastasia-0.in.applicationinsights.azure.com/;LiveEndpoint=https://eastasia.livediagnostics.monitor.azure.com/;ApplicationId=23c9318c-f56f-4e3d-bec8-4b30948b83f5"
+});
 
-<!-- Mirrored from www.nfl.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 12 Jan 2026 08:53:49 GMT -->
-</HTML>
+appInsights("trackPageView");
+</script>
